# Full-Duplex-Wireless-Communication

./: .gitignore  Antenna_Cancellation.xlsx  README.md  antenna_sim.py
Active_Cancellation/: self_cancel.py  top_block.py  working_one.grc
Active_Cancellation/DSP_Project/: audio_setup.h  main.c  util_func.h
Active_Cancellation/gr-self_cancel/: CMakeLists.txt
Active_Cancellation/gr-self_cancel/grc/: CMakeLists.txt  self_cancel_self_cancel.xml
Active_Cancellation/gr-self_cancel/lib/: CMakeLists.txt  qa_self_cancel.cc  qa_self_cancel.h  test_self_cancel.cc
Active_Cancellation/gr-self_cancel/python/: CMakeLists.txt  __init__.py  self_cancel.py
Active_Cancellation/gr-self_cancel/swig/: CMakeLists.txt
Passive_Cancellation/: Antenna_Cancellation.ods  antenna_sim.py
